# gaussian-process-presentation

./: README.md  custom_config_slides.sty  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc
gpr-code/: pyproject.toml
gpr-code/src/gpr_code/: __init__.py  bayesian_lin_reg.py  gpr.py  landscape.py  main.py
